load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "mail-account-api",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["sql"],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//project/mail/rust/account/account-ids:mail-account-ids",
        "//project/mail/rust/api/mail-api-bug-report",
        "//project/mail/rust/api/mail-api-device",
        "//project/mail/rust/api/mail-api-feature-flags",
        "//project/mail/rust/api/mail-api-ping",
        "//project/mail/rust/api/mail-api-session",
        "//project/mail/rust/api/mail-api-shared",
        "//project/mail/rust/shared/api-utils:mail-api-utils",
        "//project/mail/rust/shared/observability:mail-observability",
        "//project/mail/rust/shared/stash:mail-stash",
        "//project/mail/rust/shared/task-service:mail-task-service",
        "@crate_index//:mail-muon",
    ],
)

rust_test(
    name = "mail-account-api-test",
    size = "small",
    crate = ":mail-account-api",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
