[package]
name = "proton-account-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
categories = ["api-bindings"]

[dependencies]
# proton deps
proton-crypto-account = { workspace = true }
proton-crypto-subtle = { workspace = true }
proton-core-api = { workspace = true }
proton-core-common = { workspace = true }
proton-observability = { workspace = true }
proton-task-service = { workspace = true }
muon = { workspace = true }

# crates.io dependencies
aes-gcm = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
proton-log-service = { workspace = true }
proton-issue-reporter-service = { workspace = true }

[[example]]
name = "user_id"
