load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "mail-account-ids",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["sql"],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//project/mail/rust/shared/mail-proton-ids",
        "//project/mail/rust/shared/stash:mail-stash",
    ],
)

rust_test(
    name = "mail-account-ids-test",
    size = "small",
    crate = ":mail-account-ids",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
